@@ -176,6 +176,29 @@ def get_epix_config_object(env, src) :
 ##-----------------------------
 ##-----------------------------
 
+def get_quartz_data_object(evt, src) :
+    """get quartz data object
+    """
+    return get_camera_data_object(evt, src)
+
+##-----------------------------
+##-----------------------------
+
+def get_quartz_config_object(env, src) :
+    """get quartz config object
+    """
+    cfg = env.configStore()
+    o = cfg.get(_psana.Quartz.ConfigV2, src)
+    if o is not None : return o
+
+    o = cfg.get(_psana.Quartz.ConfigV1, src)
+    if o is not None : return o
+
+    return None
+    
+##-----------------------------
+##-----------------------------
+
 def get_acqiris_data_object(evt, src) :
     """get acqiris data object
     """
